--- a/my-app/src/components/Info.css
+++ b/my-app/src/components/Info.css
@@ -7,7 +7,7 @@
     padding: 30px;
     border-radius: 5px;
 }
-button {
+.button {
     display: inline-block;
     background: #200993;
     color: #fff;
@@ -20,10 +20,10 @@ button {
     font-size: 15px;
     font-family: inherit;
 }
-buttonChange {
+.buttonChange {
     display: inline-block;
-    background: deeppink;
-    color: #fff;
+    background: mediumspringgreen;
+    color: #200993;
     border: none;
     padding: 10px 20px;
     margin: 5px;
